--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,22 +2,11 @@ steps:
   # Build and push to container registry
   # Clean, compile, and stage the code
   - name: 'gcr.io/cloud-builders/mvn'
-    args: [ 'clean', 'package' ]
-    timeout: 1200s
+    args:
+      - '-c'
+      - |
+        mvn clean source:jar javadoc:jar verify install:install deploy:deploy
 
-  - name: 'gcr.io/cloud-builders/mvn'
-    args: [
-      'deploy:deploy-file',
-      '-DrepositoryId=artifact-registry',
-      '-Durl=https://europe-west1-maven.pkg.dev/op-paas-prod/releases',
-      '-Dfile=target/ny-logback-elasticsearch-appender-3.0.12.1.jar',
-      '-DgroupId=com.nymus',
-      '-DartifactId=ny-logback-elasticsearch-appender',
-      '-Dversion=3.0.12.1',
-      '-Dpackaging=jar',
-      '-DgeneratePom=true'
-    ]
-# Total timeout. Should be more than the sum of the steps' timeout values
 timeout: 1200s
 
 options:
