--- a/pom.xml
+++ b/pom.xml
@@ -187,12 +187,14 @@
 
     <distributionManagement>
         <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+			<id>artifact-registry</id>
+			<name>Google Artifact Registry</name>
+			<url>https://europe-west1-maven.pkg.dev/op-paas-prod/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<id>artifact-registry</id>
+			<name>Google Artifact Registry</name>
+			<url>https://europe-west1-maven.pkg.dev/op-paas-prod/releases</url>
         </repository>
     </distributionManagement>
 
